# non-childish-games

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
auth/: README.md  utils.py
src/: config.py  database.py  main.py  models.py
src/queries/: core.py  orm.py
